add detail page and fix css issue on index

--- a/S06/index.html
+++ b/S06/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <h1>Les planètes</h1>
-        <div id="planets" class="row">
+        <div id="planets" class="row justify-content-center">
 
         </div>
     </div>
